# mlproject

./: README.md  app.py  application.py  package.json  pyproject.toml  requirements-minimal.txt  requirements.txt  run_app.py  vercel.json
api/: index.py
artifacts/: model.pkl  proprocessor.pkl
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py  train_pipeline.py
templates/: home.html  index.html
